bdr.BDR.scala.error
Compilation error:
BDR:19: error: not found: value move
      case "I" =>  right(); right(); forward(); move one step forward
                                                ^BDR:19: error: not found: value step
      case "I" =>  right(); right(); forward(); move one step forward
                                                         ^